changed check for genders bindings

--- a/configure.ac
+++ b/configure.ac
@@ -5,6 +5,6 @@ AC_CONFIG_FILES([Makefile])
 
 #AC_CONFIG_SRCDIR([src/clustduct.lua src/bfcommons.lua])
 AX_PROG_LUA([5.1], [5.4])
-AC_CHECK_FILE("$luaexecdir/genders.so")
+AC_CHECK_FILE("$libdir/lua/$LUA_VERSION/genders.so",,AC_MSG_ERROR(Can not find genders lua bindings))
 
 AC_OUTPUT
