fixed configs and added default config values added default for base
added another default for base

updated config

changed entry in syslinux default

--- a/configs/clustduct.conf
+++ b/configs/clustduct.conf
@@ -4,5 +4,5 @@ hosts="/etc/hosts",
 genders="/etc/genders",
 domain="cluster.suse",
 linear_add=false,
-confdir="/root/clustduct/configs",
+confdir="/etc/clustduct.d/",
 }
