will not install anything to /srv/ any more

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,14 +11,14 @@ clustductconfdir = $(sysconfdir)
 clustductconf_DATA = configs/clustduct.conf
 
 clustductdocdir = $(docdir)
-clustductdoc_DATA = doc/* Usage.md COPYING Bugs.md
+clustductdoc_DATA = doc/* Usage.md COPYING Bugs.md configs/default configs/grub.cfg
 
 #FIXME Evil hack to point to the real /
-tftpdir= $(prefix)/../srv/tftpboot/pxelinux.cfg
-tftp_DATA = configs/default
-
-efidir = $(prefix)/../srv/tftpboot/EFI/x86
-efi_DATA = configs/grub.cfg
+#tftpdir= $(prefix)/../srv/tftpboot/pxelinux.cfg
+#tftp_DATA = configs/default
+#
+#efidir = $(prefix)/../srv/tftpboot/EFI/x86
+#efi_DATA = configs/grub.cfg
 
 kiwibasedir = $(docdir)/kiwi-descriptions/suse/x86_64/suse-leap-15.0-JeOS
 kiwibase_DATA = kiwi-descriptions/suse/x86_64/suse-leap-15.0-JeOS/Dicefile \
