--- a/doc/genders.example
+++ b/doc/genders.example
@@ -15,9 +15,12 @@
 # example for kiwi generated install entry
 #
 # openSUSE Leap15 example entry
-#JeOS15     initrd=/leap15/pxeboot.initrd.xz,append=rd.kiwi.install.pxe\wsrd.kiwi.install.image\eqtftp://192.168.100.254/leap15/LimeJeOS-Leap-15.1.xz,kernel=/leap15/LimeJeOS-Leap-15.1.kernel,nextboot=local,trigger=LimeJeOS-Leap-15.1.xz
-# SLES-15-1 example entry
-#SLE15     initrd=/sles15.1/pxeboot.initrd.xz,append=rd.kiwi.install.pxe\wsrd.kiwi.install.image\eqtftp://192.168.100.254/sles15.1/LimeJeOS-SLE-15.1.xz,kernel=/sles15.1/LimeJeOS-SLE-15.1.kernel,nextboot=local,trigger=LimeJeOS-SLE-15.1.xz
+#
+LEAP15     initrd=/leap15/pxeboot.initrd.xz,append=rd.kiwi.install.pxe\wsrd.kiwi.install.image\eqtftp://192.168.100.254/leap15/LimeJeOS-Leap-15.1.xz,kernel=/leap15/LimeJeOS-Leap-15.1.kernel,nextboot=local,trigger=LimeJeOS-Leap-15.1.xz
+#
+# SLE-HPC-15-1 example entry
+#
+SLE-HPC-15_1     initrd=/sle-hpc15.1/pxeboot.initrd.xz,append=rd.kiwi.install.pxe\wsrd.kiwi.install.image\eqtftp://192.168.100.254/sle-hpc15.1/LimeJeOS-SLE-HPC-15.1.xz,kernel=/sle-hpc15.1/LimeJeOS-SLE-HPC-15.1.kernel,nextboot=local,trigger=LimeJeOS-SLE-HPC-15.1.xz
 #
 # local boot entry
 #
@@ -37,5 +40,12 @@ compute-09 ip=192.168.100.19
 compute-10 ip=192.168.100.20
 #
 # install the kiwi image on all the nodes
+# Uncomment for target system
+
+# Install Leap 15.0
 #
-compute-[01-10] install=JeOS15
+#compute-[01-10] install=LEAP15
+
+# Install SLE-HPC-15-SP1
+#
+#compute-[01-10] install=SLE-HPC-15_1
